--- a/css/small-business.css
+++ b/css/small-business.css
@@ -5,11 +5,34 @@
  */
 
 body {
-  padding-top: 54px;
+  padding-top: 100px;
 }
 
 @media (min-width: 992px) {
   body {
-    padding-top: 56px;
+    padding-top: 100px;
   }
+}
+
+nav.bg-light {
+   border-bottom: 1px dotted gray;
+}
+
+img.item_1, img.item_2, img.item_3 {
+  max-width: 80%;
+}
+
+
+form.form-horizontal {
+    margin-bottom: 5%;
+}
+
+.form-control:focus {
+  border-color: #FF0000;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+}
+
+.card:hover {
+  border-color: #FF0000;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
 }
