--- a/css/small-business.css
+++ b/css/small-business.css
@@ -36,3 +36,10 @@ form.form-horizontal {
   border-color: #FF0000;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
 }
+
+div.searchBox {
+    position: fixed;
+    height: 260px;
+    background-color: white;
+    top: 92px;
+}
